[gd_scene load_steps=9 format=3 uid="uid://bhox0xfiactf2"]

[ext_resource type="Script" path="res://player/character_components/card_hand.gd" id="1_gtaso"]
[ext_resource type="Texture2D" uid="uid://w7bevgg7lpf5" path="res://assets/cards/neutral/neutralface.png" id="2_62y2k"]
[ext_resource type="Texture2D" uid="uid://l1ajye4pblbl" path="res://assets/cards/air/aircardface.png" id="3_pnloh"]
[ext_resource type="Texture2D" uid="uid://vtu1lgbrmw5i" path="res://assets/cards/earth/earthcardface.png" id="4_yg3v0"]
[ext_resource type="Texture2D" uid="uid://dqoscns25oeqa" path="res://assets/cards/fire/firecardface.png" id="5_vr801"]
[ext_resource type="Texture2D" uid="uid://c57c3vp8qqdak" path="res://assets/cards/especial/specialcardface.png" id="6_y10as"]
[ext_resource type="Texture2D" uid="uid://bvo81bkdj8263" path="res://assets/external_resources/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_q.png" id="7_t0gik"]
[ext_resource type="FontFile" uid="uid://bw8tebfadoyd6" path="res://assets/fonts/Minecraft.ttf" id="8_tet7a"]

[node name="CardHand" type="CanvasLayer"]
script = ExtResource("1_gtaso")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0

[node name="CardContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="BuyCards" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 528.0
offset_right = -7.0
offset_bottom = 613.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BuyCards"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Neutralface" type="Sprite2D" parent="BuyCards/MarginContainer"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_62y2k")
centered = false

[node name="Aircardface" type="Sprite2D" parent="BuyCards/MarginContainer"]
position = Vector2(10, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_pnloh")
centered = false

[node name="Earthcardface" type="Sprite2D" parent="BuyCards/MarginContainer"]
position = Vector2(18, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_yg3v0")
centered = false

[node name="Firecardface" type="Sprite2D" parent="BuyCards/MarginContainer"]
position = Vector2(26, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_vr801")
centered = false

[node name="Specialcardface" type="Sprite2D" parent="BuyCards/MarginContainer"]
position = Vector2(34, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_y10as")
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="BuyCards"]
layout_mode = 2

[node name="KeyboardQ" type="TextureRect" parent="BuyCards/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_t0gik")
expand_mode = 3
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="BuyCards/HBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="BuyCards/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("8_tet7a")
text = "Comprar "
fit_content = true
autowrap_mode = 0
